fixed z-index in about us card

--- a/css/about.css
+++ b/css/about.css
@@ -25,6 +25,7 @@
     background-position: 32px 32px;
     padding: 62px 32px 32px 32px;
     position: relative;
+    z-index: 1;
 }
 
 .about-card__title {
@@ -43,6 +44,7 @@
   font-size: 70px;
   top: 36px;
   color: var(--color-marina-800);
+  z-index: -1;
 }
 
 .about-card__text {
